@@ -1,12 +1,12 @@
-.statement { color: #ffff60; font-weight: bold; }
-.special { color: #ffa500; }
-pre { color: #ffffff; background-color: #000000; }
-body { color: #ffffff; background-color: #000000; }
-.linenum { color: #ffff00; }
-.comment { color: #80a0ff; }
-.preproc { color: #ff80ff; }
+.statement { color: #0cd900; font-weight: bold; }
+.special { color: #c515ff; }
+pre { color: #ffffff; background-color: #000038; }
+body { color: #ffffff; background-color: #000038; }
+.linenum { color: #3c87ae; background-color: #000038; }
+.comment { color: #3c87ae; }
+.preproc { color: #e9cb80; }
 .constant { color: #ffa0a0; }
-.type { color: #60ff60; font-weight: bold; }
-.keyword { color: #60ff60; font-weight: bold; }
+.type { color: #f6ff15; font-weight: bold; }
+.keyword { color: #0cd900; font-weight: bold; }
 .url { color: #0a0cfb; }
-.string { color: #fb810a; }
+.string { color: #ff9308; }
