@@ -2,5 +2,5 @@ noinst_PROGRAMS = string-test
 string_test_SOURCES = string-test.cc
 string_test_LDADD = $(top_srcdir)/lib/libutil.la
 AM_CXXFLAGS = -pedantic -ansi -Wall -Wold-style-cast
-INCLUDES = -I$(top_srcdir)/lib
+INCLUDES = -I$(top_builddir)/lib
 MAINTAINERCLEANFILES = Makefile.in *~
